--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
 	<header>
 		<div class="logo"> 
-		<div class="logotext">global</div>
-		<div class="logoimg"><img src="img/logo.png"></div>
+			<div class="logotext">global</div>
+			<div class="logoimg"><img src="img/logo.png"></div>
+		</div>
+		<div class="menu">
+			<hr class="menuline">
+			<hr class="menuline line">
+			<hr class="menuline">
 		</div>
 	</header>
 	<div class="container">
