--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="media/media(1280).css" media="all and (max-width:1280px)">
+	<link rel="stylesheet" href="media/media(1180).css" media="all and (max-width:1180px)">
+	<link rel="stylesheet" href="media/media(1080).css" media="all and (max-width:1080px)">
+	<link rel="stylesheet" href="media/media(980).css" media="all and (max-width:980px)">
+	<link rel="stylesheet" href="media/media(880).css" media="all and (max-width:880px)">
+	<link rel="stylesheet" href="media/media(780).css" media="all and (max-width:780px)">
+	<link rel="stylesheet" href="media/media(680).css" media="all and (max-width:680px)">
+	<link rel="stylesheet" href="media/media(580).css" media="all and (max-width:580px)">
 	<title>Global</title>
 </head>
 <body>
 	<header>
-		<div class="logo"> 
+		<div class="logo"><a href="">
 			<div class="logotext">global</div>
-			<div class="logoimg"><img src="img/logo.png"></div>
+			<div class="logoimg"><img src="img/logo.png"></div></a>
 		</div>
-		<div class="menu">
+		<div class="menu"><a href="">
 			<hr class="menuline">
 			<hr class="menuline line">
-			<hr class="menuline">
+			<hr class="menuline"></a>
 		</div>
 	</header>
 	<div class="container">
