--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="media/media(780).css" media="all and (max-width:780px)">
 	<link rel="stylesheet" href="media/media(680).css" media="all and (max-width:680px)">
 	<link rel="stylesheet" href="media/media(580).css" media="all and (max-width:580px)">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<title>Global</title>
 </head>
 <body>
@@ -28,11 +29,38 @@
 			<hr class="menuline"></a>
 		</div>
 	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-
-			</div>
+	<div class="home">
+		<div class="hometext">
+			<h1>Your next
+				interactive
+				experience</h1>
+		</div>
+		<button class="cta">
+			Hire Us
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
+				<g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
+					<path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"></path>
+				</g>
+				</svg>
+			<span class="btn-background"></span>
+		</button>
+		<img src="img/introduction-visual.png" class="visual">
+		<hr class="first_hr">
+		<hr class="second_hr">
+		<div class="intro--options">
+			<a href="#0" class="sclass">
+				<h3>Metiew &amp; Smith</h3>
+				<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit sed do.</p>
+			</a>
+			<a href="#0" class="elite">
+				<h3>Fantasy interactive</h3>
+				<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit sed do.</p>
+			</a>
+			<a href="#0" class="elite">
+				<h3>Paul &amp; shark</h3>
+				<p>Lorem ipsum dolor sit amet,<br>
+					 consectetur adipisicing elit sed do.</p>
+			</a>
 		</div>
 	</div>
 </body>
