--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
 		</div>
 		<div class="menu"><a href="">
 			<hr class="menuline">
-			<hr class="menuline line">
+			<hr class="line">
 			<hr class="menuline"></a>
 		</div>
 	</header>
 	<div class="home">
 		<div class="hometext">
-			<h1>Your next
+			<h1>
+				Your next
 				interactive
-				experience</h1>
+				experience
+			</h1>
 		</div>
 		<button class="cta">
 			Hire Us
